tests/errors/overflowing-duration/main.pa
# A duration literal too large for a 64-bit nanosecond count.
def main = 99999999999999999999d
